added install of packages to task

--- a/Oving3-revidert-v1.ipynb
+++ b/Oving3-revidert-v1.ipynb
@@ -13,6 +13,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "!pip install lxml\n",
+    "!pip install requests==2.23\n",
+    "!pip install matplotlib\n",
+    "!pip install networkx==2.4\n",
+    "!pip install numpy\n",
+    "!pip install scipy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from graph_utils.graph import Graph, nx, plt\n",
     "from graph_utils.buss_graph import BussGraph\n",
     "from graph_utils.tree_graph import TreeGraph\n",
