--- a/Oving3-revidert-v1.ipynb
+++ b/Oving3-revidert-v1.ipynb
@@ -302,48 +302,59 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 11,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Bus\n"
+    "C_d(v) = deg(v)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Ring\n"
+    "# Bus\n",
+    "For endepunktene 0 og 4:  \n",
+    "C_d(0) = C_d(4) = 1 ettersom nodene kun er koblet direkte til en annen node  \n",
+    "\n",
+    "For nodene i midten 1,2 og 3  \n",
+    "C_d(1) = C_d(2) = C_d(3) = 2  "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Star  "
+    "# Ring  \n",
+    "Alle nodene er koblet til like mange andre node og de har dermed lik C_d  \n",
+    "C_d(all) = 1 + 1 = 2"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Tree"
+    "# Star  \n",
+    "C_d(0) = 1*6 = 6 (centernode)  \n",
+    "C_d(1) = C_d(2) = C_d(3) = C_d(4) =C_d(5) = 1  (ytre noder)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Mesh    "
+    "# Tree  \n",
+    "C_d(0) = 3  \n",
+    "C_d(1) = C_d(2) = C_d(3) = 4  \n",
+    "C_d(4) = C_d(5) ... C_d(11) = C_d(12) = 1 \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Mesh    \n",
+    "Alle noder er koblet til alle andre noder og vil derfor ha samme C_d gitt ved  \n",
+    "C_d = #noder - 1 = 8-1 = 7  (-1 kommer fra at noden ikke kan være koblet til seg selv)  "
    ]
   },
   {
