tried to answer text task 2-3

--- a/Oving3-revidert-v1.ipynb
+++ b/Oving3-revidert-v1.ipynb
@@ -287,7 +287,7 @@
     "* Bus: Transatlantisk fiber kabel med reapetere. Veldig enkel graf som er lett å implimentere, men grafen er ikke spesielt robust med \"a sigel point  \n",
     "* Ring: Zen 3 CPU arkitektur for å koble sammen chiplets til L3-cash. Ring Bus gjør at det krever få \"ledninger\" for å koble alle kjernene sammen, men samtidig er ikke alle kjerne koblet direkte til hverande, noe som påvirker ytelsen negativt  \n",
     "* Star: Lokalt nettverk hvor ruteren representerer center noden. Dette gir ofte nettverk med en 'master' node, noe som kan gjøre systemet sårbart ettersom nettverket er avhengig av en enkelt node. På den andre siden er det lett å sende data til de andre nodene ettersom senternoden er koblet til alle andre nodene, samtidig som det ikke er behov for likemange koblinger som mesh.\n",
-    "* Tree: \n",
+    "* Tree: Enkelte filtyper som PDF er basert på tree grafer. Formatet vil ha en rotnode etterfulgt av side noder som igjen kan ha flere \"barnenoder\". Dette viser en av syrkene til tree grafen hvor den lett kan abstaheres til parent-child forhold som kan brukes til å bygge opp større strukturer på en enkel måte. Litt som stjerne grafen, vil også tree grafen ha en sårbar node i midten (rotnoden). I eksempelet ovenfor vil grafen fragmenteres i 3 hvis dette skjer og grafen er dermed ikke veldig robust.\n",
     "* Mesh: Som Ring, brukes også mesh til å koble sammen kjerner. Ved mesh er alle noder/kjerner koblet til alle andre noder og det vil derfor være minimal forsinkelse. I tillegg er mesh robust pga det store antallet koblinger mellom nodene. Desverre er de mange koblingene også en ulempe. Koblinger koster ofte resurser og tar opp plass.  \n"
    ]
   },
@@ -741,13 +741,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 21,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Kommenter foreldingen av node degrees som vises i histogrammene her:\n",
-    "\n"
+    "#Kommenter foreldingen av node degrees som vises i histogrammene her:  \n",
+    "Node degrees stemmer overens med utregningene over. De viser at mesh er en av grafene med definitivt størst antall koblinger mellom nodene, mens star, bus, ring og tree bruker langt ferre koblinger per node.  \n"
    ]
   },
   {
@@ -937,14 +935,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 24,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# Forklaring her:\n",
     "\n",
-    "\n"
+    "BarabasiAlbert med m=1 har tydelig flest noder med Node degree lik 1. Disse nodene kan dermed være ekstra sårbare fordi de kun er koblet til resten av grafen gjennom en annen node. Grafen har også en node med node degree på 12, som gjør denne noden spesielt viktig å beskytte. Desverre gjør kombinasjonen av dette at grafen ikke har mange syrker selv om den har store svakheter. For BarbabsiAlbert med m=2 redusers den første svakheten kraftig ettersom alle nodene har en node degree på minst 2. Dette gjør at ingen enkelt feil på kan fjerne forbindelsen til en node til resten av grafen. Samtidig har en node node degree på 18, noe som kan gjøre denne noden enda mer sårbar enn noden med høyest node degree for m=1 grafen. Det er også verdt å merke at siden alle nodene har en node degree på minst 2, så er det ikke sikkert at kosesekevnsene av å miste \"senter noden\" blir større enn for m=1 grafen.\n",
+    "\n",
+    "Watt Strogatz grafene har i mye stører grad noder med lik eller ganske lik node degree. Dette gjør at grafene i utgangspunktet ser ut til å ha mindre alvorlige sårbarheter med en veldig kritisk node og sårbarheter hvor en node er avhengig av en node for tilgang til grafen. Grafen for k=4 ser ut til å være litt bedre her enn grafen for k=2 ettersom gjennomsnittlig node degree er høyere. Dette kommer også frem ved å se på grafen hvor det ser ut som k=4 er mer sirkulær og har flere koblinger som gjør den svært robust. \n"
    ]
   },
   {
